# CCastle2.hg

./: .hgignore  BUGS.rst  Makefile  TODO.rst  recursive.mk  requirements.txt
AST/: Makefile
Arpeggio/: Makefile  grammar.py  grammar2.py  visitor.py
Design/: Peg.puml
Jinja/: Makefile
Mk/: CC2Cpy.mk  Jinja.Makefile.save  build.mk  clean.mk  comp.mk  dirs.mk  helpful.mk  mypy.mk  old_rules.mk  pyanalyse.mk  rPY.mk  recursive.mk  settings.mk  (+1 more)
TestDoubles_packages/TestDoubles-aigr-sieve/: Makefile  pyproject.toml
TestDoubles_packages/TestDoubles-aigr-sieve/castle/TESTDOUBLES/aigr/base/: __init__.py
TestDoubles_packages/TestDoubles-aigr-sieve/castle/TESTDOUBLES/aigr/sieve/: moats.py  namespaces.py  protocols.py
TestDoubles_packages/TestDoubles-aigr-sieve/castle/TESTDOUBLES/aigr/sieve/basic1/: __init__.py  components.py  namespaces.py  protocols.py  sieveCastle.py  sieveMoat.py
TestDoubles_packages/TestDoubles-aigr-sieve/castle/TESTDOUBLES/aigr/sieve/doc/: namespaces.puml
TestDoubles_packages/TestDoubles-aigr-sieve/doc/: basic1-import.puml  basic1-moats.puml  basic1-sieve.puml  moats.puml  protocols.puml  sieve-basic1.rst  style.puml
TestDoubles_packages/TestDoubles-aigr-sieve/pytst/: __init__.py  test_0_base.py  test_0_dummy.py  test_1_sieve_protocols.py  test_2_sieve_NS.py  test_3_moat.py
TestDoubles_packages/TestDoubles-aigr-sieve/pytst/base/: test_0_base.py
TestDoubles_packages/TestDoubles-aigr-sieve/pytst/sieve/basic1/: __init__.py  test_1_sieve_protocols.py  test_2_sieve_NS.py  test_3_components.py  test_3_interfaces.py  test_sieveCastle.py
(+343 files in other folders)
